# opencv_CPP_practise

./: .gitignore  README.md
cap_img/: CMakeLists.txt
cap_img/src/: main.cpp
channelMat_read_img/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
channelMat_read_img/bulid/src/: Makefile  cmake_install.cmake  main
channelMat_read_img/src/: main.cpp
continuous_read_imd/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
continuous_read_imd/bulid/src/: Makefile  cmake_install.cmake  main
continuous_read_imd/src/: main.cpp
extractChannel_read_img/: CMakeLists.txt
extractChannel_read_img/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
extractChannel_read_img/bulid/src/: Makefile  cmake_install.cmake  main
extractChannel_read_img/src/: main.cpp
face_detect/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
face_detect/bulid/src/: Makefile  cmake_install.cmake  main
face_detect/src/: CMakeLists.txt  main.cpp
gstreamer/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  main.cpp
read_img/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
read_img/bulid/src/: Makefile  cmake_install.cmake  main
read_img/src/: main.cpp
